crates/rstest-bdd/tests/ui_macros/datatable_optional_with_default.stderr
error: optional fields already default to None; remove the `default` attribute
 --> tests/ui_macros/datatable_optional_with_default.rs:7:5
  |
7 |     #[datatable(optional, default)]
  |     ^
